<resources>
    <string name="app_name">Restaurant Guide</string>
    <string name="heading">Personal Restaurant Guide</string>
    <string name="name">Name</string>
    <string name="addr">Address</string>
    <string name="desc">Description</string>
    <string name="tag">Tags</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="map">Map</string>
    <string name="remove">Remove</string>
    <string name="Devarshi">Devarshi Sagar : 101203070</string>
    <string name="Saba">Saba Negatu : 101226784</string>
    <string name="Vipul">Vipulkumar Chaudhari:101206944</string>
    <string name="Fahima">Fahima Chowdhury : 101185665</string>
</resources>